--- a/wp-content/themes/amanda/assets/css/main.css
+++ b/wp-content/themes/amanda/assets/css/main.css
@@ -420,6 +420,13 @@ placeholder {
   width: 100%;
   max-width: 100%; }
 
+.home .site-container {
+  height: 100%; }
+
+.home .wrap {
+  height: 100%;
+  padding: 0; }
+
 .fullWindow, html, body, header[role=banner], .masthead, .masthead:after {
   width: 100%;
   height: 100%; }
