--- a/wp-content/themes/amanda/assets/sass/main.scss
+++ b/wp-content/themes/amanda/assets/sass/main.scss
@@ -31,6 +31,13 @@ placeholder {
 	width: 100%;
 	max-width: 100%;
 }
+.home .site-container{
+	height:100%;
+}
+.home .wrap{
+	height: 100%;
+	padding: 0;
+}
 .fullWindow{
 	width: 100%;
 	height: 100%;
@@ -46,7 +53,7 @@ header[role=banner]{
 .masthead{
 	@extend .fullWindow;
 	
-	background-image: url(../assets/img/amanda-belly.jpg);
+	background-image: url(../img/amanda-belly.jpg);
 	background-repeat: no-repeat;
 	background-size: 1440px;
 	background-position: bottom center;
@@ -135,7 +142,7 @@ header[role=banner]{
 	z-index: 2;
 	width: 100%;
 	height: 150px;
-	background-image: url(../assets/img/amanda-belly-blur.jpg);
+	background-image: url(../img/amanda-belly-blur.jpg);
 	background-repeat: no-repeat;
 	background-size: 1440px;
 	background-position: bottom center;
